Wed Feb 28 21:57:24 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_start): Don't ignore SIGPIPE in
	  subprocesses; this has undesirable consequences in some
	  situations.
	  (pipeline_wait): Flatten SIGPIPE exit statuses to zero instead.

Tue Feb 27 20:58:31 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* lib/pipeline.c (pipeline_start): Save previous value of SIGQUIT
	  such that it gets restored as SIGQUIT, not as SIGINT.

Wed Feb 14 12:20:28 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* m4/man-path-progs.m4: New file with MAN_PATH_PROGS macro.
	* configure.ac: Use MAN_PATH_PROGS where reasonable (browser, pager,
	  nroff, eqn, neqn, tbl, col, vgrind, refer, grap, pic, gzip,
	  compress, bzip2) to allow overriding the default search for
	  auxiliary program locations.
	* docs/NEWS: Document this.

Wed Feb 14 10:41:28 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* acinclude.m4: Remove and split into ...
	* m4/man-ansi-sprintf.m4, m4/man-bdb.m4, m4/man-fnmatch.m4,
	  m4/man-gnu-nroff.m4, m4/man-pclose.m4, m4/man-strsignal.m4: ...
	  these new files.
	* configure.ac (AC_CONFIG_SRCDIR): Use src/man.c rather than
	  acinclude.m4.

Wed Feb 14 10:32:28 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* libdb/db_lookup.c (make_content): Restore (size_t) cast in
	  assertion.

Wed Feb 14 10:30:52 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* libdb/db_gdbm.c (man_gdbm_nextkey): Fix MYDBM_DPTR vs. MYDBM_DSIZE
	  typo.

Wed Feb 14 09:52:15 GMT 2007  Colin Watson  <cjwatson@debian.org>

	* libdb/db_btree.c (test_insert): Use debug function.

	* libdb/mydbm.h (GDBM, NDBM, BTREE): Add MYDBM_DPTR, MYDBM_SET_DPTR,
	  and MYDBM_DSIZE accessor macros.
	  (BTREE): Make datum be a typedef for DBT rather than our own
	  struct, fixing "dereferencing type-punned pointer will break
	  strict-aliasing rules" warnings from GCC. Adjust MYDBM_DELETE
	  definition accordingly.
	* libdb/db_btree.c (test_insert, btree_findkey, dbstore, dblookup):