@@ -1,3 +1,8 @@
+Wed Feb 28 22:04:04 GMT 2007  Colin Watson  <cjwatson@debian.org>
+
+	* lib/pipeline.c (pipeline_start): Close inputs and outputs from
+	  other active pipelines in all subprocesses.
+
 Wed Feb 28 21:57:24 GMT 2007  Colin Watson  <cjwatson@debian.org>
 
 	* lib/pipeline.c (pipeline_start): Don't ignore SIGPIPE in
